# transcript-intelligence

./: .env  .gitignore  BONUS.md  README.md  pyproject.toml
interview-assignment/html/: finding_prevalence.html  sentiment_distribution.html  topic_hierarchy.html  topic_prevalence_all_time.html  topic_prevalence_monthly.html
src/transcript_intelligence/: aggregation.py  analytics.py  classify.py  cli.py  config.py  execution.py  ingest.py  io_utils.py  logging_setup.py  models.py  pii.py  pipeline.py  quote_match.py  remote_llm.py  semantic.py  turns.py
